features included: -train-test-validation split -saving metrics per epoch and per step

--- a/server/palmyra.env
+++ b/server/palmyra.env
@@ -4,7 +4,7 @@ TOKENIZER=Writer/palmyra-small
 CACHE_DIR=./models
 USE_AUTH_TOKEN=True
 
-TRAIN_DATA_PATH=./data/US_qbank.jsonl
+TRAIN_DATA_PATH=./data/train.jsonl
 DATASET_TYPE=mcq_jsonl
 PAD_TOKEN=<eos>
 DATA_FORMAT=jsonl
@@ -16,14 +16,14 @@ EPOCHS=1
 BATCH_SIZE=4
 LEARNING_RATE=3e-4
 GRAD_ACC_STEPS=2
-DEVICE=mps
+DEVICE=cpu  
 SAVE_STRATEGY=epoch
 
 RESUME_CHECKPOINT=
 
 METRICS=loss,accuracy,rouge
 
-LOG_INTERVAL=20
+LOG_INTERVAL=5
 METRICS_PATH=./results/palmyra_small_metrics.json
 
 OUTPUT_DIR=./results/palmyra_small
