--- a/server/default.env
+++ b/server/default.env
@@ -1,4 +1,3 @@
-
 HUGGINGFACE_TOKEN=huggingface_access_token
 PROJECT_NAME=default_project
 MODEL_NAME=gpt2
@@ -8,18 +7,22 @@ USE_AUTH_TOKEN=False
 PAD_TOKEN=<eos>
 MAX_LENGTH=512
 
-TRAIN_DATA_PATH=./data/train.jsonl
-DATASET_TYPE=instruction_jsonl
+TRAIN_DATA_PATH=./data/train1.jsonl
+DATASET_TYPE=mcq_jsonl
 DATA_FORMAT=jsonl
 
-# Fine tuning technique (sft, peft, lora, qlora, etc.)
-TECHNIQUE=lora
+# Optional: Separate validation and test files
+VAL_DATA_PATH=
+TEST_DATA_PATH=
 
-LORA_R=8
-LORA_ALPHA=16
-LORA_DROPOUT=0.1
-LORA_TARGET_MODULES=auto
-LORA_BIAS=none
+# If separate files not provided, split ratios from train file
+TRAIN_RATIO=0.8
+VAL_RATIO=0.1
+TEST_RATIO=0.1
+SPLIT_SEED=42
+
+# Fine tuning technique
+TECHNIQUE=lora
 
 # LoRA Hyperparameters
 LORA_R=8
@@ -40,10 +43,14 @@ LEARNING_RATE=3e-4
 GRAD_ACC_STEPS=4
 DEVICE=auto
 SAVE_STRATEGY=epoch
+EVAL_STEPS=100
+PACKING=False
 
 RESUME_CHECKPOINT=
 
-METRICS=loss,accuracy
+# Metrics to track (comma-separated)
+TRACK_METRICS=accuracy,f1,precision,recall,rouge,bleu
+# Add rouge,bleu only if doing text generation
 LOG_INTERVAL=10
 METRICS_PATH=./results/metrics.json
 
