Adding code to compare the models based on custom prompts

--- a/server/default.env
+++ b/server/default.env
@@ -54,5 +54,11 @@ TRACK_METRICS=accuracy,f1,precision,recall,rouge,bleu
 LOG_INTERVAL=10
 METRICS_PATH=./results/metrics.json
 
+PROMPTS_FILE=./prompts.txt
+COMPARISON_MAX_TOKENS=150
+COMPARISON_TEMPERATURE=0.7
+COMPARISON_TOP_P=0.9
+COMPARISON_DO_SAMPLE=True
+
 OUTPUT_DIR=./results/output
 REPORT_PATH=./results/report.json
