--- a/server/palmyra.env
+++ b/server/palmyra.env
@@ -4,7 +4,7 @@ TOKENIZER=Writer/palmyra-small
 CACHE_DIR=./models
 USE_AUTH_TOKEN=True
 
-TRAIN_DATA_PATH=./data/train.jsonl
+TRAIN_DATA_PATH=./data/train1.jsonl
 DATASET_TYPE=mcq_jsonl
 PAD_TOKEN=<eos>
 DATA_FORMAT=jsonl
@@ -12,10 +12,10 @@ DATA_FORMAT=jsonl
 TECHNIQUE=lora
 LORA_TARGET_MODULES=auto
 
-EPOCHS=1
+EPOCHS=4
 BATCH_SIZE=4
 LEARNING_RATE=3e-4
-GRAD_ACC_STEPS=2
+GRAD_ACC_STEPS=4
 DEVICE=cpu  
 SAVE_STRATEGY=epoch
 
