--- a/server/default.env
+++ b/server/default.env
@@ -43,22 +43,30 @@ LEARNING_RATE=3e-4
 GRAD_ACC_STEPS=4
 DEVICE=auto
 SAVE_STRATEGY=epoch
-EVAL_STEPS=100
+EVAL_STEPS=5
 PACKING=False
 
 RESUME_CHECKPOINT=
 
 # Metrics to track (comma-separated)
+METRICS = accuracy,f1,precision,recall,rouge,bleu
 TRACK_METRICS=accuracy,f1,precision,recall,rouge,bleu
 # Add rouge,bleu only if doing text generation
 LOG_INTERVAL=10
 METRICS_PATH=./results/metrics.json
 
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://127.0.0.1:27017/
+MONGODB_DB_NAME=llm_finetuning
+MONGODB_COLLECTION_PREFIX=finetuning_results
+MONGODB_ENABLED=true
+
 PROMPTS_FILE=./prompts.txt
-COMPARISON_MAX_TOKENS=150
+COMPARISON_OUTPUT=./results/model_comparison_results.json
+MAX_NEW_TOKENS=100
 COMPARISON_TEMPERATURE=0.7
-COMPARISON_TOP_P=0.9
-COMPARISON_DO_SAMPLE=True
+
 
 OUTPUT_DIR=./results/output
 REPORT_PATH=./results/report.json
