comparatoe module updated with required reconfiguring.

--- a/server/default.env
+++ b/server/default.env
@@ -8,7 +8,7 @@ PAD_TOKEN=<eos>
 MAX_LENGTH=512
 
 TRAIN_DATA_PATH=./data/train1.jsonl
-DATASET_TYPE=mcq_jsonl
+DATASET_TYPE=text
 DATA_FORMAT=jsonl
 
 # Optional: Separate validation and test files
