--- a/server/palmyra.env
+++ b/server/palmyra.env
@@ -5,7 +5,7 @@ CACHE_DIR=./models
 USE_AUTH_TOKEN=True
 
 TRAIN_DATA_PATH=./data/train1.jsonl
-DATASET_TYPE=mcq_jsonl
+DATASET_TYPE=qa
 PAD_TOKEN=<eos>
 DATA_FORMAT=jsonl
 
@@ -26,5 +26,5 @@ METRICS=loss,accuracy,rouge
 LOG_INTERVAL=5
 METRICS_PATH=./results/palmyra_small_metrics.json
 
-OUTPUT_DIR=./results/palmyra_small
+OUTPUT_DIR=./results
 REPORT_PATH=./results/palmyra_small_report.json
